# rp-fde-takehome

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  HINTS.md  MANUAL_TESTING.md  RCA_SOCKET_DISCONNECTED_LOOP.md  README.md  docker-compose.yml  main.py  pyproject.toml  wedge-poison-direct.py  wedge-repro.py  wedge-repro.sh
connect/: pipeline.yaml
plans/: 001-fix-doc-drift.md  002-env-tunables-gap.md  003-api-unit-tests-and-hardening.md  004-stats-endpoint.md  005-lint-and-ty-gate.md  006-prompt-fencing-and-truncation.md  007-narrow-typeerror-catch.md  008-consolidate-infra-factories.md  009-failure-routing-dedup.md  010-sqlalchemy-migration.md  011-fastapi-pagination-cursor.md  012-db-interface-error-fidelity.md  013-db-connect-retry-loop-tests.md  014-real-sleep-heartbeat-integration-test.md  015-tighten-5xx-classifier-backoff-assertion.md  README.md
service/: Dockerfile  pyproject.toml
service/app/: api.py  classifier.py  config.py  db.py  failures.py  infra.py  models.py  retrier.py  routing.py  sweeper.py  tui.py  worker.py
service/scripts/: confirm_bool_guard.py
service/tests/: conftest.py  fakes.py  test_api.py  test_classifier.py  test_db.py  test_failures.py  test_infra.py  test_retrier.py  test_sweeper.py  test_worker.py
service/tests/integration/: conftest.py  test_api.py  test_db_guards.py  test_failure_paths.py  test_pipeline_e2e.py  test_sweeper_drain.py
sql/: schema.sql
