[project]
name = "redpanda-fde-takehome"
version = "0.1.0"
description = "Workspace root for the wiki-edits pipeline; the deployable service lives in service/."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "reasoning-service",
]

[tool.uv.workspace]
members = ["service"]

[tool.uv.sources]
reasoning-service = { workspace = true }

[dependency-groups]
dev = [
    "mutmut>=3.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "testcontainers[ollama,postgres]>=4.14",
    "ty>=0.0.40",
]

[tool.ruff.lint]
select = ["I", "F", "E"]

[tool.pytest.ini_options]
testpaths = ["service/tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: needs Docker (testcontainers); run with: uv run pytest -m integration",
    "llm: also needs the Ollama model pulled; slow",
]
# Third-party deprecation noise only; warnings raised from our own code still show.
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
    "ignore:The wait_for_logs function.*:DeprecationWarning:testcontainers",
]
