[project]
name = "reasoning-service"
version = "0.1.0"
description = "Consumes wiki.edits.raw, classifies edits with Claude, writes to Postgres, serves results."
requires-python = ">=3.13"
dependencies = [
    "kafka-python==3.0.7",
    "anthropic==0.116.0",
    "psycopg[binary]==3.3.4",
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "fastapi-pagination[sqlalchemy]==0.15.15",
    "httpx==0.28.1",
    "textual==8.2.8",
]

[project.scripts]
edits-tui = "app.tui:main"

# Without an explicit testpaths, a bare `pytest` from this directory also
# collects mutmut's mutants/tests copy and dies on an import mismatch.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: needs Docker (testcontainers); run with: uv run pytest -m integration",
    "llm: also needs the Ollama model pulled; slow",
]
# Third-party deprecation noise only; warnings raised from our own code still show.
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
    "ignore:The wait_for_logs function.*:DeprecationWarning:testcontainers",
]

# Mutation testing. Run from this directory (service/): `uv run mutmut run`.
# mutmut matches mutants to tests by module name, so source_paths must be the
# importable package root ("app"), not "service/app" from the workspace root.
[tool.mutmut]
source_paths = ["app"]
pytest_add_cli_args_test_selection = ["tests"]
do_not_mutate_patterns = [
    "logger\\.\\w+",  # Ignores all logger.info/debug/warning statements
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
